Updated promo banner to blue

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
    PROMO BANNER
    ============================ */
 .promo-banner {
-  background: linear-gradient(to right, #c40000, #ff0000);
+  background: linear-gradient(to right, #312eca, #312eca);
   color: #fff;
   padding: 25px;
   font-size: 1.3rem;
