--- a/style.css
+++ b/style.css
@@ -88,6 +88,12 @@ body {
   padding: 15px 20px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.7);
 }
+.header-center {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  transform: translateX(25px); /* nudges search bar to the right */
+}
 
 .logo {
   height: 50px;
